# edgar_digital_twin

./: README.md
source/3d_model/high_res/: Edgar_T7.fbx  Edgar_T7_disassembled.fbx  README.md  SMC_EDGAR_T7.fbx  SMC_T7.fbx  SMC_sc_EDGAR_T7.fbx  SM_sc_T7.fbx  edgar.unitypackage
source/3d_model/low_res/: README.md  edgar.fbx
source/sensor_parameter/: README.md  edgar.urdf
source/vehicle_dynamics_parameter/: README.md  vehicle_parameters_edgar.yaml
tools/AWSIM/: README.md  urdf2unity_transform.py
tools/CARLA/: README.md  sensors_to_carla.py
tools/edgar_sensor_kit_launch/: README.md
tools/edgar_sensor_kit_launch/edgar_common_sensor_launch/: CMakeLists.txt  package.xml
tools/edgar_sensor_kit_launch/edgar_common_sensor_launch/launch/: innovusion_node_container.launch.py  ouster_node_container.launch.py  velodyne_VLP16.launch.xml  velodyne_VLS128.launch.xml  velodyne_node_container.launch.py
tools/edgar_sensor_kit_launch/edgar_sensor_kit_description/: CMakeLists.txt  package.xml
tools/edgar_sensor_kit_launch/edgar_sensor_kit_description/config/: sensor_kit_calibration.yaml  sensors_calibration.yaml
tools/edgar_sensor_kit_launch/edgar_sensor_kit_launch/: CMakeLists.txt  package.xml
tools/edgar_state_publisher/: README.md
tools/edgar_state_publisher/launch/: edgar.launch.py
tools/edgar_state_publisher/rviz/: edgar.rviz
tools/edgar_vehicle_model/: README.md
tools/edgar_vehicle_model/edgar_vehicle_description/: CMakeLists.txt  package.xml
tools/edgar_vehicle_model/edgar_vehicle_launch/: CMakeLists.txt  package.xml
(+31 files in other folders)
