<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>edgar_vehicle_launch</name>
  <version>0.1.0</version>
  <description>The edgar_vehicle_launch package</description>
  <maintainer email="gemb.kaljavesi@tum.de">Gemb Kaljavesi</maintainer>
  <license>Apache 2.0 License</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
